# ffgh-rs

./: Cargo.toml  Makefile  README.md  _while.sh  build.rs  ffgh  ffgh_xbar_plugin.10s.sh  justfile
examples/: main_proto_config.rs
src/: actions.rs  config.proto  config.rs  fzf.rs  gh.rs  lib.rs  main.rs  storage.rs  sync.rs  util.rs  xbar.rs
